--- a/wit-manifest.json
+++ b/wit-manifest.json
@@ -8,5 +8,10 @@
         "commit": "9a0ce2272c9d5d0a8bdc90e84269749ce054664d",
         "name": "chisel3",
         "source": "git@github.com:freechipsproject/chisel3.git"
+    },
+    {
+        "commit": "e946dd9e0de2301d41e4dcb0e3ead890b4bed1e3",
+        "name": "scala-wake",
+        "source": "git@github.com:sifive/scala-wake.git"
     }
 ]
