--- a/wit-manifest.json
+++ b/wit-manifest.json
@@ -1,12 +1,12 @@
 [
     {
-        "commit": "37e8aea250f94f13ef3a6800fae39b6169379f42",
-        "name": "firrtl-wake",
-        "source": "git@github.com:sifive/firrtl-wake.git"
-    },
-    {
         "commit": "9a0ce2272c9d5d0a8bdc90e84269749ce054664d",
         "name": "chisel3",
         "source": "git@github.com:freechipsproject/chisel3.git"
+    },
+    {
+        "commit": "9fbfcf19ae795c82aa41caec603bf442ff7cc7a5",
+        "name": "api-firrtl-sifive",
+        "source": "git@github.com:sifive/api-firrtl-sifive.git"
     }
 ]
