--- a/wit-manifest.json
+++ b/wit-manifest.json
@@ -8,5 +8,10 @@
         "commit": "72152a0b22610753397b057a056762aaedeabedd",
         "name": "api-firrtl-sifive",
         "source": "git@github.com:sifive/api-firrtl-sifive.git"
+    },
+    {
+        "commit": "1c3539138f71d38f007e19870bcf5f69d9713307",
+        "name": "api-scala-sifive",
+        "source": "git@github.com:sifive/api-scala-sifive.git"
     }
 ]
